@@ -20,7 +20,6 @@ import static org.mockito.Mockito.when;
 
 import static org.chromium.chrome.browser.tasks.tab_management.MessageCardViewProperties.DESCRIPTION_TEXT;
 import static org.chromium.chrome.browser.tasks.tab_management.MessageCardViewProperties.UI_DISMISS_ACTION_PROVIDER;
-import static org.chromium.chrome.browser.tasks.tab_management.MessageService.MessageType.ALL;
 import static org.chromium.chrome.browser.tasks.tab_management.TabGroupRowProperties.COLOR_INDEX;
 import static org.chromium.chrome.browser.tasks.tab_management.TabGroupRowProperties.DELETE_RUNNABLE;
 import static org.chromium.chrome.browser.tasks.tab_management.TabGroupRowProperties.LEAVE_RUNNABLE;
@@ -38,7 +37,6 @@ import static org.chromium.components.tab_group_sync.SyncedGroupTestHelper.SYNC_
 import android.content.Context;
 import android.view.ContextThemeWrapper;
 
-import androidx.core.util.Pair;
 import androidx.test.core.app.ApplicationProvider;
 
 import org.junit.Before;
@@ -50,24 +48,26 @@ import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
-import org.robolectric.shadows.ShadowLooper;
 
 import org.chromium.base.Callback;
 import org.chromium.base.Token;
 import org.chromium.base.test.BaseRobolectricTestRunner;
+import org.chromium.base.test.RobolectricUtil;
 import org.chromium.base.test.util.Features.DisableFeatures;
 import org.chromium.base.test.util.Features.EnableFeatures;
 import org.chromium.chrome.browser.collaboration.messaging.MessagingBackendServiceFactory;
+import org.chromium.chrome.browser.data_sharing.DataSharingTabManager;
 import org.chromium.chrome.browser.flags.ChromeFeatureList;
 import org.chromium.chrome.browser.hub.PaneId;
 import org.chromium.chrome.browser.hub.PaneManager;
 import org.chromium.chrome.browser.tab.Tab;
-import org.chromium.chrome.browser.tabmodel.TabGroupModelFilter;
+import org.chromium.chrome.browser.tab_ui.ActionConfirmationManager;
+import org.chromium.chrome.browser.tab_ui.ActionConfirmationManager.MaybeBlockingResult;
 import org.chromium.chrome.browser.tabmodel.TabList;
 import org.chromium.chrome.browser.tabmodel.TabModel;
 import org.chromium.chrome.browser.tabmodel.TabModelObserver;
 import org.chromium.chrome.browser.tabmodel.TabRemover;
-import org.chromium.chrome.browser.tasks.tab_management.ActionConfirmationManager.MaybeBlockingResult;
+import org.chromium.chrome.browser.tasks.tab_management.TabGroupRowView.TabGroupRowViewTitleData;
 import org.chromium.components.browser_ui.widget.ActionConfirmationResult;
 import org.chromium.components.collaboration.CollaborationService;
 import org.chromium.components.collaboration.ServiceStatus;
@@ -92,9 +92,6 @@ import org.chromium.components.tab_group_sync.TabGroupSyncService;
 import org.chromium.components.tab_group_sync.TabGroupUiActionHandler;
 import org.chromium.components.tab_group_sync.TriggerSource;
 import org.chromium.components.tab_groups.TabGroupColorId;
-import org.chromium.ui.modaldialog.ModalDialogManager;
-import org.chromium.ui.modaldialog.ModalDialogProperties;
-import org.chromium.ui.modaldialog.ModalDialogProperties.ButtonType;
 import org.chromium.ui.modelutil.MVCListAdapter.ModelList;
 import org.chromium.ui.modelutil.PropertyModel;
 import org.chromium.ui.test.util.MockitoHelper;
@@ -102,7 +99,6 @@ import org.chromium.ui.test.util.MockitoHelper;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
 
 /** Tests for {@link TabGroupListMediator}. */
@@ -122,7 +118,6 @@ public class TabGroupListMediatorUnitTest {
 
     @Rule public MockitoRule mMockitoRule = MockitoJUnit.rule();
 
-    @Mock private TabGroupModelFilter mTabGroupModelFilter;
     @Mock private TabModel mTabModel;
     @Mock private TabRemover mTabRemover;
     @Mock private TabList mComprehensiveModel;
@@ -139,9 +134,9 @@ public class TabGroupListMediatorUnitTest {
     @Mock private SyncService mSyncService;
     @Mock private Tab mTab1;
     @Mock private Tab mTab2;
-    @Mock private ModalDialogManager mModalDialogManager;
     @Mock private MessagingBackendService mMessagingBackendService;
-    @Mock private Runnable mFinishBlocking;
+    @Mock private DataSharingTabManager mDataSharingTabManager;
+    @Mock private PersistentVersioningMessageMediator mPersistentVersioningMessageMediator;
 
     @Captor private ArgumentCaptor<TabModelObserver> mTabModelObserver;
     @Captor private ArgumentCaptor<TabGroupSyncService.Observer> mTabGroupSyncObserverCaptor;
@@ -166,6 +161,7 @@ public class TabGroupListMediatorUnitTest {
     private Context mContext;
     private SharedGroupTestHelper mSharedGroupTestHelper;
     private SyncedGroupTestHelper mSyncedGroupTestHelper;
+    private TabGroupRemovedMessageMediator mTabGroupRemovedMessageMediator;
 
     @Before
     public void setUp() {
@@ -177,7 +173,6 @@ public class TabGroupListMediatorUnitTest {
         mModelList = new ModelList();
         when(mPaneManager.getPaneForId(PaneId.TAB_SWITCHER)).thenReturn(mTabSwitcherPaneBase);
         when(mTabSwitcherPaneBase.requestOpenTabGroupDialog(anyInt())).thenReturn(true);
-        when(mTabGroupModelFilter.getTabModel()).thenReturn(mTabModel);
         when(mTabModel.getComprehensiveModel()).thenReturn(mComprehensiveModel);
         when(mTabModel.getTabRemover()).thenReturn(mTabRemover);
         mSharedGroupTestHelper = new SharedGroupTestHelper(mCollaborationService);
@@ -187,6 +182,9 @@ public class TabGroupListMediatorUnitTest {
         when(mCollaborationService.getServiceStatus()).thenReturn(mServiceStatus);
         when(mServiceStatus.isAllowedToJoin()).thenReturn(true);
         when(mDataSharingService.getUiDelegate()).thenReturn(mDataSharingUiDelegate);
+
+        mTabGroupRemovedMessageMediator =
+                new TabGroupRemovedMessageMediator(mContext, mMessagingBackendService, mModelList);
     }
 
     private TabGroupListMediator createMediator() {
@@ -195,7 +193,7 @@ public class TabGroupListMediatorUnitTest {
                         mContext,
                         mModelList,
                         mPropertyModel,
-                        mTabGroupModelFilter,
+                        mTabModel,
                         mFaviconResolver,
                         mTabGroupSyncService,
                         mDataSharingService,
@@ -205,7 +203,10 @@ public class TabGroupListMediatorUnitTest {
                         mTabGroupUiActionHandler,
                         mActionConfirmationManager,
                         mSyncService,
-                        mModalDialogManager);
+                        /* enableContainment= */ true,
+                        mDataSharingTabManager,
+                        mTabGroupRemovedMessageMediator,
+                        mPersistentVersioningMessageMediator);
         verify(mSyncService).addSyncStateChangedListener(mSyncStateChangedListenerCaptor.capture());
         return mediator;
     }
@@ -234,7 +235,10 @@ public class TabGroupListMediatorUnitTest {
         assertEquals(1, mModelList.size());
 
         PropertyModel model = mModelList.get(0).model;
-        assertEquals(new Pair<>("Title", 1), model.get(TITLE_DATA));
+        assertEquals(
+                new TabGroupRowViewTitleData(
+                        "Title", 1, R.plurals.tab_group_row_accessibility_text),
+                model.get(TITLE_DATA));
         assertEquals(TabGroupColorId.BLUE, model.get(COLOR_INDEX));
     }
 
@@ -245,22 +249,32 @@ public class TabGroupListMediatorUnitTest {
         fooGroup.color = TabGroupColorId.BLUE;
         fooGroup.savedTabs = SyncedGroupTestHelper.tabsFromCount(2);
         fooGroup.creationTimeMs = 1;
+        fooGroup.savedTabs.get(0).updateTimeMs = 2;
+        fooGroup.savedTabs.get(1).updateTimeMs = 1;
 
         SavedTabGroup barGroup = mSyncedGroupTestHelper.newTabGroup(SYNC_GROUP_ID2);
         barGroup.title = "Bar";
         barGroup.color = TabGroupColorId.RED;
         barGroup.savedTabs = SyncedGroupTestHelper.tabsFromCount(3);
         barGroup.creationTimeMs = 2;
+        barGroup.savedTabs.get(0).updateTimeMs = 3;
+        barGroup.savedTabs.get(1).updateTimeMs = 2;
+        barGroup.savedTabs.get(2).updateTimeMs = 1;
 
         createMediator();
         assertEquals(2, mModelList.size());
 
         PropertyModel barModel = mModelList.get(0).model;
-        assertEquals(new Pair<>("Bar", 3), barModel.get(TITLE_DATA));
+        assertEquals(
+                new TabGroupRowViewTitleData("Bar", 3, R.plurals.tab_group_row_accessibility_text),
+                barModel.get(TITLE_DATA));
         assertEquals(TabGroupColorId.RED, barModel.get(COLOR_INDEX));
 
+        // Ensure the tab groups are sorted by update time and NOT creation time.
         PropertyModel fooModel = mModelList.get(1).model;
-        assertEquals(new Pair<>("Foo", 2), fooModel.get(TITLE_DATA));
+        assertEquals(
+                new TabGroupRowViewTitleData("Foo", 2, R.plurals.tab_group_row_accessibility_text),
+                fooModel.get(TITLE_DATA));
         assertEquals(TabGroupColorId.BLUE, fooModel.get(COLOR_INDEX));
     }
 
@@ -279,7 +293,7 @@ public class TabGroupListMediatorUnitTest {
         mTabGroupSyncObserverCaptor
                 .getValue()
                 .onTabGroupRemoved(SYNC_GROUP_ID1, TriggerSource.LOCAL);
-        ShadowLooper.idleMainLooper();
+        RobolectricUtil.runAllBackgroundAndUi();
 
         assertEquals(0, mModelList.size());
     }
@@ -295,10 +309,10 @@ public class TabGroupListMediatorUnitTest {
         assertEquals(1, mModelList.size());
 
         mSyncedGroupTestHelper.removeTabGroup(SYNC_GROUP_ID1);
-        when(mTabGroupModelFilter.isTabInTabGroup(mTab1)).thenReturn(true);
-        verify(mTabGroupModelFilter).addObserver(mTabModelObserver.capture());
+        when(mTabModel.isTabInTabGroup(mTab1)).thenReturn(true);
+        verify(mTabModel).addObserver(mTabModelObserver.capture());
         mTabModelObserver.getValue().tabClosureUndone(mTab1);
-        ShadowLooper.idleMainLooper();
+        RobolectricUtil.runAllBackgroundAndUi();
 
         assertEquals(0, mModelList.size());
     }
@@ -320,12 +334,14 @@ public class TabGroupListMediatorUnitTest {
         group3.savedTabs = SyncedGroupTestHelper.tabsFromCount(1);
         group3.localId = null;
 
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID2))
-                .thenReturn(Tab.INVALID_TAB_ID);
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID2)).thenReturn(Tab.INVALID_TAB_ID);
+        when(mTabModel.tabGroupExists(LOCAL_GROUP_ID1)).thenReturn(true);
+        when(mTabModel.tabGroupExists(LOCAL_GROUP_ID2)).thenReturn(false);
+        List<Tab> tabList = List.of(mTab1);
+        when(mComprehensiveModel.iterator()).thenAnswer(invocation -> tabList.iterator());
         when(mComprehensiveModel.getCount()).thenReturn(1);
-        when(mComprehensiveModel.getTabAt(0)).thenReturn(mTab1);
-        when(mTab1.getRootId()).thenReturn(ROOT_ID1);
+        when(mComprehensiveModel.getTabAtChecked(0)).thenReturn(mTab1);
         when(mTab1.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
         when(mTab1.isClosing()).thenReturn(false);
 
@@ -333,9 +349,15 @@ public class TabGroupListMediatorUnitTest {
 
         assertEquals(2, mModelList.size());
         PropertyModel model1 = mModelList.get(0).model;
-        assertEquals(new Pair<>("in current", 1), model1.get(TITLE_DATA));
+        assertEquals(
+                new TabGroupRowViewTitleData(
+                        "in current", 1, R.plurals.tab_group_row_accessibility_text),
+                model1.get(TITLE_DATA));
         PropertyModel model2 = mModelList.get(1).model;
-        assertEquals(new Pair<>("hidden", 1), model2.get(TITLE_DATA));
+        assertEquals(
+                new TabGroupRowViewTitleData(
+                        "hidden", 1, R.plurals.tab_group_row_accessibility_text),
+                model2.get(TITLE_DATA));
     }
 
     @Test
@@ -349,12 +371,14 @@ public class TabGroupListMediatorUnitTest {
         group2.savedTabs = SyncedGroupTestHelper.tabsFromCount(1);
         group2.localId = null;
 
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID2))
-                .thenReturn(Tab.INVALID_TAB_ID);
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID2)).thenReturn(Tab.INVALID_TAB_ID);
+        when(mTabModel.tabGroupExists(LOCAL_GROUP_ID1)).thenReturn(true);
+        when(mTabModel.tabGroupExists(LOCAL_GROUP_ID2)).thenReturn(false);
+        List<Tab> tabList = List.of(mTab1);
+        when(mComprehensiveModel.iterator()).thenAnswer(invocation -> tabList.iterator());
         when(mComprehensiveModel.getCount()).thenReturn(1);
-        when(mComprehensiveModel.getTabAt(0)).thenReturn(mTab1);
-        when(mTab1.getRootId()).thenReturn(ROOT_ID1);
+        when(mComprehensiveModel.getTabAtChecked(0)).thenReturn(mTab1);
         when(mTab1.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
         when(mTab1.isClosing()).thenReturn(false);
 
@@ -375,13 +399,14 @@ public class TabGroupListMediatorUnitTest {
                             updatedGroup2.savedTabs = SyncedGroupTestHelper.tabsFromCount(1);
                             updatedGroup2.localId = new LocalTabGroupId(LOCAL_GROUP_ID2);
 
-                            when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID2))
+                            when(mTabModel.tabGroupExists(LOCAL_GROUP_ID2)).thenReturn(true);
+                            when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID2))
                                     .thenReturn(ROOT_ID2);
                         })
                 .when(mTabGroupUiActionHandler)
                 .openTabGroup(SYNC_GROUP_ID2);
 
-        ShadowLooper.idleMainLooper();
+        RobolectricUtil.runAllBackgroundAndUi();
 
         PropertyModel model2 = mModelList.get(1).model;
         model2.get(OPEN_RUNNABLE).run();
@@ -396,9 +421,10 @@ public class TabGroupListMediatorUnitTest {
         group1.savedTabs = SyncedGroupTestHelper.tabsFromIds(ROOT_ID1);
         group1.localId = new LocalTabGroupId(LOCAL_GROUP_ID1);
 
+        List<Tab> tabList = List.of(mTab1);
+        when(mComprehensiveModel.iterator()).thenAnswer(invocation -> tabList.iterator());
         when(mComprehensiveModel.getCount()).thenReturn(1);
-        when(mComprehensiveModel.getTabAt(0)).thenReturn(mTab1);
-        when(mTab1.getRootId()).thenReturn(ROOT_ID1);
+        when(mComprehensiveModel.getTabAtChecked(0)).thenReturn(mTab1);
         when(mTab1.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
         when(mTab1.isClosing()).thenReturn(true);
 
@@ -408,11 +434,13 @@ public class TabGroupListMediatorUnitTest {
 
         // Pretend the closure was already committed so we need to fallback to the HIDDEN behavior.
         group1.localId = null;
+        when(mComprehensiveModel.iterator())
+                .thenAnswer(invocation -> Collections.emptyList().iterator());
         when(mComprehensiveModel.getCount()).thenReturn(0);
         MockitoHelper.doRunnable(
                         () -> {
                             group1.localId = new LocalTabGroupId(LOCAL_GROUP_ID1);
-                            when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID1))
+                            when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID1))
                                     .thenReturn(ROOT_ID1);
                         })
                 .when(mTabGroupUiActionHandler)
@@ -432,9 +460,10 @@ public class TabGroupListMediatorUnitTest {
         group1.savedTabs = SyncedGroupTestHelper.tabsFromIds(ROOT_ID1);
         group1.localId = new LocalTabGroupId(LOCAL_GROUP_ID1);
 
+        List<Tab> tabList = List.of(mTab1);
+        when(mComprehensiveModel.iterator()).thenAnswer(invocation -> tabList.iterator());
         when(mComprehensiveModel.getCount()).thenReturn(1);
-        when(mComprehensiveModel.getTabAt(0)).thenReturn(mTab1);
-        when(mTab1.getRootId()).thenReturn(ROOT_ID1);
+        when(mComprehensiveModel.getTabAtChecked(0)).thenReturn(mTab1);
         when(mTab1.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
         when(mTab1.isClosing()).thenReturn(true);
 
@@ -442,7 +471,7 @@ public class TabGroupListMediatorUnitTest {
 
         assertEquals(1, mModelList.size());
 
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
 
         PropertyModel model1 = mModelList.get(0).model;
         model1.get(OPEN_RUNNABLE).run();
@@ -457,14 +486,14 @@ public class TabGroupListMediatorUnitTest {
         group1.savedTabs = SyncedGroupTestHelper.tabsFromIds(ROOT_ID1, ROOT_ID2);
         group1.localId = new LocalTabGroupId(LOCAL_GROUP_ID1);
 
+        List<Tab> tabList = List.of(mTab1, mTab2);
+        when(mComprehensiveModel.iterator()).thenAnswer(invocation -> tabList.iterator());
         when(mComprehensiveModel.getCount()).thenReturn(2);
-        when(mComprehensiveModel.getTabAt(0)).thenReturn(mTab1);
-        when(mComprehensiveModel.getTabAt(1)).thenReturn(mTab2);
-        when(mTab1.getRootId()).thenReturn(ROOT_ID1);
+        when(mComprehensiveModel.getTabAtChecked(0)).thenReturn(mTab1);
+        when(mComprehensiveModel.getTabAtChecked(1)).thenReturn(mTab2);
         when(mTab1.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
-        when(mTab2.getRootId()).thenReturn(ROOT_ID1);
         when(mTab2.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
 
         createMediator();
         assertEquals(1, mModelList.size());
@@ -498,14 +527,12 @@ public class TabGroupListMediatorUnitTest {
         group2.savedTabs = SyncedGroupTestHelper.tabsFromCount(1);
         group2.localId = null;
 
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID2))
-                .thenReturn(Tab.INVALID_TAB_ID);
-        when(mTabGroupModelFilter.getRelatedTabListForRootId(ROOT_ID1))
-                .thenReturn(Arrays.asList(mTab1));
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID2)).thenReturn(Tab.INVALID_TAB_ID);
+        when(mTabModel.getTabsInGroup(LOCAL_GROUP_ID1)).thenReturn(Arrays.asList(mTab1));
+        when(mComprehensiveModel.iterator()).thenAnswer(invocation -> List.of(mTab1).iterator());
         when(mComprehensiveModel.getCount()).thenReturn(1);
-        when(mComprehensiveModel.getTabAt(0)).thenReturn(mTab1);
-        when(mTab1.getRootId()).thenReturn(ROOT_ID1);
+        when(mComprehensiveModel.getTabAtChecked(0)).thenReturn(mTab1);
         when(mTab1.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
         when(mTab1.isClosing()).thenReturn(false);
 
@@ -544,12 +571,11 @@ public class TabGroupListMediatorUnitTest {
         group1.savedTabs = SyncedGroupTestHelper.tabsFromIds(ROOT_ID1);
         group1.localId = new LocalTabGroupId(LOCAL_GROUP_ID1);
 
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
-        when(mTabGroupModelFilter.getRelatedTabListForRootId(ROOT_ID1))
-                .thenReturn(Arrays.asList(mTab1));
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
+        when(mTabModel.getTabsInGroup(LOCAL_GROUP_ID1)).thenReturn(Arrays.asList(mTab1));
+        when(mComprehensiveModel.iterator()).thenAnswer(invocation -> List.of(mTab1).iterator());
         when(mComprehensiveModel.getCount()).thenReturn(1);
-        when(mComprehensiveModel.getTabAt(0)).thenReturn(mTab1);
-        when(mTab1.getRootId()).thenReturn(ROOT_ID1);
+        when(mComprehensiveModel.getTabAtChecked(0)).thenReturn(mTab1);
         when(mTab1.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
         when(mTab1.isClosing()).thenReturn(true);
 
@@ -577,7 +603,7 @@ public class TabGroupListMediatorUnitTest {
         mTabGroupSyncObserverCaptor
                 .getValue()
                 .onTabGroupRemoved(SYNC_GROUP_ID1, TriggerSource.LOCAL);
-        ShadowLooper.idleMainLooper();
+        RobolectricUtil.runAllBackgroundAndUi();
         assertFalse(mPropertyModel.get(TabGroupListProperties.EMPTY_STATE_VISIBLE));
     }
 
@@ -597,14 +623,14 @@ public class TabGroupListMediatorUnitTest {
     public void testDestroy() {
         createMediator().destroy();
 
-        verify(mTabGroupModelFilter).removeObserver(any());
+        verify(mTabModel).removeObserver(any());
         verify(mTabGroupSyncService).removeObserver(any());
         verify(mSyncService).removeSyncStateChangedListener(any());
 
         verify(mTabGroupSyncService).addObserver(mTabGroupSyncObserverCaptor.capture());
         reset(mTabGroupSyncService);
         mTabGroupSyncObserverCaptor.getValue().onTabGroupAdded(null, 0);
-        ShadowLooper.idleMainLooper();
+        RobolectricUtil.runAllBackgroundAndUi();
         verify(mTabGroupSyncService, never()).getAllGroupIds();
 
         verify(mMessagingBackendService)
@@ -619,12 +645,11 @@ public class TabGroupListMediatorUnitTest {
         group1.localId = new LocalTabGroupId(LOCAL_GROUP_ID1);
         group1.collaborationId = COLLABORATION_ID1;
 
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
-        when(mTabGroupModelFilter.getRelatedTabListForRootId(ROOT_ID1))
-                .thenReturn(Arrays.asList(mTab1));
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
+        when(mTabModel.getTabsInGroup(LOCAL_GROUP_ID1)).thenReturn(Arrays.asList(mTab1));
+        when(mComprehensiveModel.iterator()).thenAnswer(invocation -> List.of(mTab1).iterator());
         when(mComprehensiveModel.getCount()).thenReturn(1);
-        when(mComprehensiveModel.getTabAt(0)).thenReturn(mTab1);
-        when(mTab1.getRootId()).thenReturn(ROOT_ID1);
+        when(mComprehensiveModel.getTabAtChecked(0)).thenReturn(mTab1);
         when(mTab1.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
         when(mTab1.isClosing()).thenReturn(false);
         mSharedGroupTestHelper.mockGetGroupData(COLLABORATION_ID1, GROUP_MEMBER1);
@@ -638,21 +663,7 @@ public class TabGroupListMediatorUnitTest {
         assertNotNull(model.get(DELETE_RUNNABLE));
         model.get(DELETE_RUNNABLE).run();
 
-        verify(mActionConfirmationManager)
-                .processDeleteSharedGroupAttempt(
-                        any(), mMaybeBlockingResultCallbackCaptor.capture());
-        mMaybeBlockingResultCallbackCaptor
-                .getValue()
-                .onResult(
-                        new MaybeBlockingResult(
-                                ActionConfirmationResult.CONFIRMATION_POSITIVE, mFinishBlocking));
-
-        verify(mCollaborationService)
-                .deleteGroup(eq(COLLABORATION_ID1), mDeleteGroupResultCallbackCaptor.capture());
-        mDeleteGroupResultCallbackCaptor.getValue().onResult(true);
-        verify(mFinishBlocking).run();
-        verify(mModalDialogManager, never())
-                .showDialog(mModalPropertyModelCaptor.capture(), anyInt());
+        verify(mDataSharingTabManager).leaveOrDeleteFlow(any(), anyInt());
     }
 
     @Test
@@ -663,11 +674,11 @@ public class TabGroupListMediatorUnitTest {
         group1.localId = new LocalTabGroupId(LOCAL_GROUP_ID1);
         group1.collaborationId = COLLABORATION_ID1;
 
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
-        when(mTabGroupModelFilter.getRelatedTabListForRootId(ROOT_ID1)).thenReturn(List.of(mTab1));
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
+        when(mTabModel.getTabsInGroup(LOCAL_GROUP_ID1)).thenReturn(List.of(mTab1));
+        when(mComprehensiveModel.iterator()).thenAnswer(invocation -> List.of(mTab1).iterator());
         when(mComprehensiveModel.getCount()).thenReturn(1);
-        when(mComprehensiveModel.getTabAt(0)).thenReturn(mTab1);
-        when(mTab1.getRootId()).thenReturn(ROOT_ID1);
+        when(mComprehensiveModel.getTabAtChecked(0)).thenReturn(mTab1);
         when(mTab1.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
         when(mTab1.isClosing()).thenReturn(false);
         mSharedGroupTestHelper.mockGetGroupData(COLLABORATION_ID1, GROUP_MEMBER1, GROUP_MEMBER2);
@@ -680,25 +691,7 @@ public class TabGroupListMediatorUnitTest {
         assertNotNull(model.get(LEAVE_RUNNABLE));
         model.get(LEAVE_RUNNABLE).run();
 
-        verify(mActionConfirmationManager)
-                .processLeaveGroupAttempt(any(), mMaybeBlockingResultCallbackCaptor.capture());
-        mMaybeBlockingResultCallbackCaptor
-                .getValue()
-                .onResult(
-                        new MaybeBlockingResult(
-                                ActionConfirmationResult.CONFIRMATION_POSITIVE, mFinishBlocking));
-
-        verify(mCollaborationService)
-                .leaveGroup(eq(COLLABORATION_ID1), mDeleteGroupResultCallbackCaptor.capture());
-        mDeleteGroupResultCallbackCaptor.getValue().onResult(false);
-        verify(mFinishBlocking).run();
-
-        verify(mModalDialogManager).showDialog(mModalPropertyModelCaptor.capture(), anyInt());
-
-        ModalDialogProperties.Controller controller =
-                mModalPropertyModelCaptor.getValue().get(ModalDialogProperties.CONTROLLER);
-        controller.onClick(mModalPropertyModelCaptor.getValue(), ButtonType.POSITIVE);
-        verify(mModalDialogManager).dismissDialog(any(), anyInt());
+        verify(mDataSharingTabManager).leaveOrDeleteFlow(any(), anyInt());
     }
 
     @Test
@@ -710,12 +703,11 @@ public class TabGroupListMediatorUnitTest {
         group1.localId = new LocalTabGroupId(LOCAL_GROUP_ID1);
         group1.collaborationId = COLLABORATION_ID1;
 
-        when(mTabGroupModelFilter.getRootIdFromTabGroupId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
-        when(mTabGroupModelFilter.getRelatedTabListForRootId(ROOT_ID1))
-                .thenReturn(Arrays.asList(mTab1));
+        when(mTabModel.getGroupLastShownTabId(LOCAL_GROUP_ID1)).thenReturn(ROOT_ID1);
+        when(mTabModel.getTabsInGroup(LOCAL_GROUP_ID1)).thenReturn(Arrays.asList(mTab1));
+        when(mComprehensiveModel.iterator()).thenAnswer(invocation -> List.of(mTab1).iterator());
         when(mComprehensiveModel.getCount()).thenReturn(1);
-        when(mComprehensiveModel.getTabAt(0)).thenReturn(mTab1);
-        when(mTab1.getRootId()).thenReturn(ROOT_ID1);
+        when(mComprehensiveModel.getTabAtChecked(0)).thenReturn(mTab1);
         when(mTab1.getTabGroupId()).thenReturn(LOCAL_GROUP_ID1);
         when(mTab1.isClosing()).thenReturn(false);
         mSharedGroupTestHelper.mockGetGroupDataFailure(COLLABORATION_ID1);
@@ -734,7 +726,7 @@ public class TabGroupListMediatorUnitTest {
     @EnableFeatures(ChromeFeatureList.DATA_SHARING)
     public void testNoTabGroupRemovedMessageCard() {
         List<PersistentMessage> messageList = List.of();
-        when(mMessagingBackendService.getMessages(any())).thenReturn(messageList);
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(messageList);
         createMediator();
         assertEquals(0, mModelList.size());
     }
@@ -744,7 +736,7 @@ public class TabGroupListMediatorUnitTest {
     public void testNoGroupRemovedMessageCard_NullId() {
         PersistentMessage messageWithoutId = new PersistentMessage();
         messageWithoutId.attribution = new MessageAttribution();
-        when(mMessagingBackendService.getMessages(any())).thenReturn(List.of(messageWithoutId));
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(List.of(messageWithoutId));
 
         createMediator();
 
@@ -756,7 +748,7 @@ public class TabGroupListMediatorUnitTest {
     public void testTabGroupRemovedMessageCard() {
         List<PersistentMessage> messageList =
                 List.of(makeTabGroupRemovedMessage(MESSAGE_ID1, GROUP_NAME1));
-        when(mMessagingBackendService.getMessages(any())).thenReturn(messageList);
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(messageList);
 
         createMediator();
 
@@ -774,7 +766,7 @@ public class TabGroupListMediatorUnitTest {
                 List.of(
                         makeTabGroupRemovedMessage(MESSAGE_ID1, GROUP_NAME1),
                         makeTabGroupRemovedMessage(MESSAGE_ID2, ""));
-        when(mMessagingBackendService.getMessages(any())).thenReturn(messageList);
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(messageList);
 
         createMediator();
 
@@ -793,7 +785,7 @@ public class TabGroupListMediatorUnitTest {
                         makeTabGroupRemovedMessage(MESSAGE_ID1, GROUP_NAME1),
                         makeTabGroupRemovedMessage(MESSAGE_ID2, GROUP_NAME2),
                         makeTabGroupRemovedMessage(MESSAGE_ID3, GROUP_NAME3));
-        when(mMessagingBackendService.getMessages(any())).thenReturn(messageList);
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(messageList);
 
         createMediator();
 
@@ -808,7 +800,7 @@ public class TabGroupListMediatorUnitTest {
     @EnableFeatures(ChromeFeatureList.DATA_SHARING)
     public void testTabGroupRemovedMessageCardWithOneUnnamedGroupTitle() {
         List<PersistentMessage> messageList = List.of(makeTabGroupRemovedMessage(MESSAGE_ID1, ""));
-        when(mMessagingBackendService.getMessages(any())).thenReturn(messageList);
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(messageList);
 
         createMediator();
 
@@ -826,19 +818,23 @@ public class TabGroupListMediatorUnitTest {
                 List.of(
                         makeTabGroupRemovedMessage(MESSAGE_ID1, GROUP_NAME1),
                         makeTabGroupRemovedMessage(MESSAGE_ID2, GROUP_NAME2));
-        when(mMessagingBackendService.getMessages(any())).thenReturn(messageList);
-
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(messageList);
         SavedTabGroup fooGroup = mSyncedGroupTestHelper.newTabGroup(SYNC_GROUP_ID1);
         fooGroup.title = "Foo";
         fooGroup.color = TabGroupColorId.BLUE;
         fooGroup.savedTabs = SyncedGroupTestHelper.tabsFromCount(2);
         fooGroup.creationTimeMs = 1;
+        fooGroup.savedTabs.get(0).updateTimeMs = 1;
+        fooGroup.savedTabs.get(1).updateTimeMs = 0;
 
         SavedTabGroup barGroup = mSyncedGroupTestHelper.newTabGroup(SYNC_GROUP_ID2);
         barGroup.title = "Bar";
         barGroup.color = TabGroupColorId.RED;
         barGroup.savedTabs = SyncedGroupTestHelper.tabsFromCount(3);
         barGroup.creationTimeMs = 2;
+        barGroup.savedTabs.get(0).updateTimeMs = 3;
+        barGroup.savedTabs.get(1).updateTimeMs = 2;
+        barGroup.savedTabs.get(2).updateTimeMs = 1;
 
         createMediator();
 
@@ -850,13 +846,68 @@ public class TabGroupListMediatorUnitTest {
                 model1.get(DESCRIPTION_TEXT));
         assertEquals(MESSAGE, model1.get(CARD_TYPE));
 
+        // Ensure the tab groups are sorted by update time and NOT creation time.
         PropertyModel barModel = mModelList.get(1).model;
-        assertEquals(new Pair<>("Bar", 3), barModel.get(TITLE_DATA));
+        assertEquals(
+                new TabGroupRowViewTitleData("Bar", 3, R.plurals.tab_group_row_accessibility_text),
+                barModel.get(TITLE_DATA));
         assertEquals(TabGroupColorId.RED, barModel.get(COLOR_INDEX));
 
         PropertyModel fooModel = mModelList.get(2).model;
-        assertEquals(new Pair<>("Foo", 2), fooModel.get(TITLE_DATA));
+        assertEquals(
+                new TabGroupRowViewTitleData("Foo", 2, R.plurals.tab_group_row_accessibility_text),
+                fooModel.get(TITLE_DATA));
         assertEquals(TabGroupColorId.BLUE, fooModel.get(COLOR_INDEX));
+    }
+
+    @Test
+    @EnableFeatures({ChromeFeatureList.DATA_SHARING})
+    public void testTabGroupRemovedMessageCardsAndTabGroupsOrdering_ByRecency() {
+        List<PersistentMessage> messageList =
+                List.of(
+                        makeTabGroupRemovedMessage(MESSAGE_ID1, GROUP_NAME1),
+                        makeTabGroupRemovedMessage(MESSAGE_ID2, GROUP_NAME2));
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(messageList);
+
+        SavedTabGroup fooGroup = mSyncedGroupTestHelper.newTabGroup(SYNC_GROUP_ID1);
+        fooGroup.title = "Foo";
+        fooGroup.color = TabGroupColorId.BLUE;
+        fooGroup.savedTabs = SyncedGroupTestHelper.tabsFromCount(2);
+        fooGroup.creationTimeMs = 1;
+        fooGroup.savedTabs.get(0).updateTimeMs = 3;
+        fooGroup.savedTabs.get(1).updateTimeMs = 2;
+
+        SavedTabGroup barGroup = mSyncedGroupTestHelper.newTabGroup(SYNC_GROUP_ID2);
+        barGroup.title = "Bar";
+        barGroup.color = TabGroupColorId.RED;
+        barGroup.savedTabs = SyncedGroupTestHelper.tabsFromCount(3);
+        barGroup.creationTimeMs = 2;
+        barGroup.savedTabs.get(0).updateTimeMs = 2;
+        barGroup.savedTabs.get(1).updateTimeMs = 1;
+        barGroup.savedTabs.get(2).updateTimeMs = 0;
+
+        createMediator();
+
+        assertEquals(3, mModelList.size());
+
+        PropertyModel model1 = mModelList.get(0).model;
+        assertEquals(
+                "\"Shopping\" and \"Travel\" tab groups no longer available",
+                model1.get(DESCRIPTION_TEXT));
+        assertEquals(MESSAGE, model1.get(CARD_TYPE));
+
+        // Ensure the tab groups are sorted by update time and NOT creation time.
+        PropertyModel fooModel = mModelList.get(1).model;
+        assertEquals(
+                new TabGroupRowViewTitleData("Foo", 2, R.plurals.tab_group_row_accessibility_text),
+                fooModel.get(TITLE_DATA));
+        assertEquals(TabGroupColorId.BLUE, fooModel.get(COLOR_INDEX));
+
+        PropertyModel barModel = mModelList.get(2).model;
+        assertEquals(
+                new TabGroupRowViewTitleData("Bar", 3, R.plurals.tab_group_row_accessibility_text),
+                barModel.get(TITLE_DATA));
+        assertEquals(TabGroupColorId.RED, barModel.get(COLOR_INDEX));
     }
 
     @Test
@@ -866,40 +917,48 @@ public class TabGroupListMediatorUnitTest {
                 List.of(
                         makeTabGroupRemovedMessage(MESSAGE_ID1, GROUP_NAME1),
                         makeTabGroupRemovedMessage(MESSAGE_ID2, GROUP_NAME2));
-        when(mMessagingBackendService.getMessages(any())).thenReturn(messageList);
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(messageList);
 
         SavedTabGroup fooGroup = mSyncedGroupTestHelper.newTabGroup(SYNC_GROUP_ID1);
         fooGroup.title = "Foo";
         fooGroup.color = TabGroupColorId.BLUE;
         fooGroup.savedTabs = SyncedGroupTestHelper.tabsFromCount(2);
         fooGroup.creationTimeMs = 1;
+        fooGroup.savedTabs.get(0).updateTimeMs = 2;
+        fooGroup.savedTabs.get(1).updateTimeMs = 1;
 
         SavedTabGroup barGroup = mSyncedGroupTestHelper.newTabGroup(SYNC_GROUP_ID2);
         barGroup.title = "Bar";
         barGroup.color = TabGroupColorId.RED;
         barGroup.savedTabs = SyncedGroupTestHelper.tabsFromCount(3);
         barGroup.creationTimeMs = 2;
+        barGroup.savedTabs.get(0).updateTimeMs = 3;
+        barGroup.savedTabs.get(1).updateTimeMs = 2;
+        barGroup.savedTabs.get(2).updateTimeMs = 1;
 
         createMediator();
 
         // Dismiss the message card.
         PropertyModel modelToBeRemoved = mModelList.get(0).model;
-        modelToBeRemoved.get(UI_DISMISS_ACTION_PROVIDER).dismiss(ALL);
+        modelToBeRemoved.get(UI_DISMISS_ACTION_PROVIDER).action();
 
         assertEquals(2, mModelList.size());
         verify(mMessagingBackendService)
-                .clearPersistentMessage(
-                        MESSAGE_ID1, Optional.of(PersistentNotificationType.TOMBSTONED));
+                .clearPersistentMessage(MESSAGE_ID1, PersistentNotificationType.TOMBSTONED);
         verify(mMessagingBackendService)
-                .clearPersistentMessage(
-                        MESSAGE_ID2, Optional.of(PersistentNotificationType.TOMBSTONED));
+                .clearPersistentMessage(MESSAGE_ID2, PersistentNotificationType.TOMBSTONED);
 
         PropertyModel barModel = mModelList.get(0).model;
-        assertEquals(new Pair<>("Bar", 3), barModel.get(TITLE_DATA));
+        assertEquals(
+                new TabGroupRowViewTitleData("Bar", 3, R.plurals.tab_group_row_accessibility_text),
+                barModel.get(TITLE_DATA));
         assertEquals(TabGroupColorId.RED, barModel.get(COLOR_INDEX));
 
+        // Ensure the tab groups are sorted by update time and NOT creation time.
         PropertyModel fooModel = mModelList.get(1).model;
-        assertEquals(new Pair<>("Foo", 2), fooModel.get(TITLE_DATA));
+        assertEquals(
+                new TabGroupRowViewTitleData("Foo", 2, R.plurals.tab_group_row_accessibility_text),
+                fooModel.get(TITLE_DATA));
         assertEquals(TabGroupColorId.BLUE, fooModel.get(COLOR_INDEX));
     }
 
@@ -910,26 +969,32 @@ public class TabGroupListMediatorUnitTest {
         PersistentMessage newMessageCard = makeTabGroupRemovedMessage(MESSAGE_ID2, GROUP_NAME2);
 
         // Set up backend to return the initial message.
-        when(mMessagingBackendService.getMessages(any())).thenReturn(List.of(originalMessage));
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(List.of(originalMessage));
 
         createMediator();
         assertEquals(1, mModelList.size());
 
         // Invoke displayPersistentMessage from backend which adds one more message.
-        when(mMessagingBackendService.getMessages(any()))
+        when(mMessagingBackendService.getMessages(anyInt()))
                 .thenReturn(List.of(originalMessage, newMessageCard));
         verify(mMessagingBackendService)
                 .addPersistentMessageObserver(mPersistentMessageObserverCaptor.capture());
         mPersistentMessageObserverCaptor.getValue().displayPersistentMessage(newMessageCard);
-        ShadowLooper.idleMainLooper();
+        RobolectricUtil.runAllBackgroundAndUi();
 
         assertEquals(1, mModelList.size());
 
         // Disable sync which should clear all the backend messages.
         when(mSyncService.getActiveDataTypes()).thenReturn(Set.of());
-        when(mMessagingBackendService.getMessages(any())).thenReturn(List.of());
+        when(mMessagingBackendService.getMessages(anyInt())).thenReturn(List.of());
         mSyncStateChangedListenerCaptor.getValue().syncStateChanged();
         assertEquals(0, mModelList.size());
+    }
+
+    @Test
+    public void testPersistentVersioningMessagePossiblyQueued() {
+        createMediator();
+        verify(mPersistentVersioningMessageMediator, times(2)).queueMessageIfNeeded();
     }
 
     private PersistentMessage makeTabGroupRemovedMessage(String messageId, String groupName) {
