@@ -4,23 +4,24 @@
 
 package org.chromium.chrome.browser.tabmodel;
 
-import androidx.annotation.NonNull;
-import androidx.annotation.Nullable;
-
 import org.chromium.base.ThreadUtils.ThreadChecker;
+import org.chromium.base.TimeUtils;
+import org.chromium.build.annotations.NullMarked;
+import org.chromium.build.annotations.Nullable;
 import org.chromium.chrome.browser.tab.Tab;
 
 import java.util.ArrayList;
 import java.util.HashSet;
-import java.util.LinkedList;
+import java.util.Iterator;
 import java.util.List;
 import java.util.ListIterator;
 
 /**
- * Manages the logic pertaining to tracking pending tab closures for a {@link TabModelImpl}.
- * This class does not directly perform any tab related actions and delegates that work
- * to the {@link PendingTabClosureDelegate} it is provided.
+ * Manages the logic pertaining to tracking pending tab closures for a {@link TabModelImpl}. This
+ * class does not directly perform any tab related actions and delegates that work to the {@link
+ * PendingTabClosureDelegate} it is provided.
  */
+@NullMarked
 public class PendingTabClosureManager {
     /**
      * Delegate for applying changes to a {@link TabList} based on the decision logic in
@@ -52,25 +53,30 @@ public class PendingTabClosureManager {
         /**
          * Called when a TabClosureEvent is completely cancelled and about to be removed.
          *
-         * @param event The event that's been cancelled.
+         * @param undoRunnable The runnable to run if the event was undone.
          */
         void notifyOnCancelingTabClosure(@Nullable Runnable undoRunnable);
+
+        /** Returns all tabs in the model. */
+        List<Tab> getAllTabs();
     }
 
     /** Represents a set of tabs closed together. */
     static class TabClosureEvent {
-        private final LinkedList<Tab> mClosingTabs;
+        private final List<Tab> mClosingTabs;
         private final HashSet<Tab> mUnhandledTabs;
         private final @Nullable Runnable mUndoRunnable;
+        private final long mTimestamp;
 
         /**
          * @param tabs The list of closing tabs.
          * @param undoRunnable The runnable to run if the event was undone.
          */
         public TabClosureEvent(List<Tab> tabs, @Nullable Runnable undoRunnable) {
-            mClosingTabs = new LinkedList<>(tabs);
+            mClosingTabs = new ArrayList<>(tabs);
             mUnhandledTabs = new HashSet<>(mClosingTabs);
             mUndoRunnable = undoRunnable;
+            mTimestamp = TimeUtils.currentTimeMillis();
         }
 
         /**
@@ -99,13 +105,18 @@ public class PendingTabClosureManager {
         }
 
         /** Returns the list of tabs marked as closing in this event. */
-        public LinkedList<Tab> getList() {
+        public List<Tab> getList() {
             return mClosingTabs;
         }
 
         /** Returns the undo runnable. */
         public @Nullable Runnable getUndoRunnable() {
             return mUndoRunnable;
+        }
+
+        /** Returns the timestamp (in millis) of the tab closure event. */
+        public long getTimestamp() {
+            return mTimestamp;
         }
     }
 
@@ -155,27 +166,29 @@ public class PendingTabClosureManager {
         }
 
         @Override
-        public Tab getTabAt(int index) {
+        public @Nullable Tab getTabAt(int index) {
             if (index < 0 || index >= mRewoundTabs.size()) return null;
             return mRewoundTabs.get(index);
         }
 
         @Override
-        public int indexOf(Tab tab) {
+        public int indexOf(@Nullable Tab tab) {
             return mRewoundTabs.indexOf(tab);
         }
 
+        @Override
+        public Iterator<Tab> iterator() {
+            return ReadOnlyIterator.maybeCreate(mRewoundTabs.iterator());
+        }
+
         /**
-         * Resets this list to match the original {@link TabList}.  Note that if the
-         * {@link TabList} doesn't support pending closures this model will be empty.  This should
-         * be called whenever {@link TabList}'s list of tabs changes.
+         * Resets this list to match the original {@link TabList}. Note that if the {@link TabList}
+         * doesn't support pending closures this model will be empty. This should be called whenever
+         * {@link TabList}'s list of tabs changes.
          */
         public void resetRewoundState() {
             mRewoundTabs.clear();
-
-            for (int i = 0; i < mTabModel.getCount(); i++) {
-                mRewoundTabs.add(mTabModel.getTabAt(i));
-            }
+            mRewoundTabs.addAll(mDelegate.getAllTabs());
         }
 
         /**
@@ -187,12 +200,22 @@ public class PendingTabClosureManager {
          * @return The {@link Tab} specified by {@code tabId} as long as that tab only exists in
          *     this model and not in {@code mTabModel}. {@code null} otherwise.
          */
-        public Tab getPendingRewindTab(int tabId) {
+        public @Nullable Tab getPendingRewindTab(int tabId) {
             if (mTabModel.getTabById(tabId) != null) return null;
             for (Tab tab : mRewoundTabs) {
                 if (tab.getId() == tabId) return tab;
             }
             return null;
+        }
+
+        /**
+         * Adds a {@link Tab} to this internal list.
+         *
+         * @param tab The {@link Tab} to add.
+         * @param index The index to add the tab at.
+         */
+        public void addTab(Tab tab, int index) {
+            mRewoundTabs.add(index, tab);
         }
 
         /**
@@ -206,7 +229,7 @@ public class PendingTabClosureManager {
         }
 
         /**
-         * Destroy all tabs in this model.  This will check to see if the tab is already destroyed
+         * Destroy all tabs in this model. This will check to see if the tab is already destroyed
          * before destroying it.
          */
         public void destroy() {
@@ -222,18 +245,18 @@ public class PendingTabClosureManager {
         }
     }
 
-    /** Thread checks to root cause crbug.com/1465745. */
+    /** Thread checks to root cause crbug.com/40276103. */
     private final ThreadChecker mThreadChecker = new ThreadChecker();
 
     private boolean mIsCommittingAllTabClosures;
 
     /** The {@link TabModel} that this {@link PendingTabClosureManager} operates on. */
-    private TabModel mTabModel;
+    private final TabModel mTabModel;
 
-    private PendingTabClosureDelegate mDelegate;
+    private final PendingTabClosureDelegate mDelegate;
 
     /** Representation of a set of tabs that were closed together. */
-    private LinkedList<TabClosureEvent> mTabClosureEvents = new LinkedList<>();
+    private final ArrayList<TabClosureEvent> mTabClosureEvents = new ArrayList<>();
 
     /**
      * A {@link TabList} that represents the complete list of {@link Tab}s. This is so that
@@ -248,8 +271,7 @@ public class PendingTabClosureManager {
      * @param delegate A {@link PendingTabClosureDelegate} to use to apply cancelled and committed
      *     tab closures.
      */
-    public PendingTabClosureManager(
-            @NonNull TabModel tabModel, @NonNull PendingTabClosureDelegate delegate) {
+    public PendingTabClosureManager(TabModel tabModel, PendingTabClosureDelegate delegate) {
         assert tabModel != null;
         assert delegate != null;
 
@@ -285,6 +307,22 @@ public class PendingTabClosureManager {
     }
 
     /**
+     * Notifies the manager that a tab was added to the model, so the rewound list can be updated.
+     * This is an optimization to avoid a full reset of the rewound list.
+     *
+     * @param tab The tab that was added.
+     * @param index The index where the tab was added.
+     */
+    public void notifyTabAdded(Tab tab, int index) {
+        mThreadChecker.assertOnValidThread();
+        assert !mIsCommittingAllTabClosures
+                : "Modifying mTabClosureEvents while committing all tab closures.";
+
+        assert mTabClosureEvents.isEmpty();
+        mRewoundList.addTab(tab, index);
+    }
+
+    /**
      * Creates a new closure event when pending tabs are closed.
      *
      * @param tabs The list of {@link Tab} that are closing.
@@ -310,6 +348,11 @@ public class PendingTabClosureManager {
      */
     public boolean isClosurePending(int tabId) {
         return mRewoundList.getPendingRewindTab(tabId) != null;
+    }
+
+    /** Returns whether there are any pending closures in the rewound list. */
+    public boolean hasPendingClosures() {
+        return mRewoundList.hasPendingClosures();
     }
 
     /**
@@ -415,11 +458,19 @@ public class PendingTabClosureManager {
 
         if (mTabClosureEvents.isEmpty()) return false;
 
-        TabClosureEvent event = mTabClosureEvents.removeLast();
+        TabClosureEvent event = mTabClosureEvents.remove(mTabClosureEvents.size() - 1);
         for (Tab tab : event.getList()) {
             cancelClosureInternal(tab);
         }
         return true;
+    }
+
+    long getMostRecentClosureTime() {
+        mThreadChecker.assertOnValidThread();
+        if (mTabClosureEvents.isEmpty()) return TabModel.INVALID_TIMESTAMP;
+
+        TabClosureEvent event = mTabClosureEvents.get(mTabClosureEvents.size() - 1);
+        return event.getTimestamp();
     }
 
     private void commitClosuresInternal(List<Tab> tabs) {
@@ -441,22 +492,23 @@ public class PendingTabClosureManager {
     private void cancelClosureInternal(Tab tab) {
         tab.setClosing(false);
 
-        // Find a valid previous tab entry so we know what tab to insert after.  With the following
-        // example, calling cancelTabClosure(4) would need to know to insert after 2.  So we have to
+        // Find a valid previous tab entry so we know what tab to insert after. With the following
+        // example, calling cancelTabClosure(4) would need to know to insert after 2. So we have to
         // track across mRewoundTabs and mTabModel and see what the last valid mTabModel entry was
-        // (2) when we hit the 4 in the rewound list.  An insertIndex of -1 represents the beginning
+        // (2) when we hit the 4 in the rewound list. An insertIndex of -1 represents the beginning
         // of the list, as this is the index of tab to insert after.
         // mTabModel:   0   2     5
         // mRewoundTabs 0 1 2 3 4 5
         int prevIndex = -1;
         final int stopIndex = mRewoundList.indexOf(tab);
+        List<Tab> tabs = mDelegate.getAllTabs();
         for (int rewoundIndex = 0; rewoundIndex < stopIndex; rewoundIndex++) {
             Tab rewoundTab = mRewoundList.getTabAt(rewoundIndex);
-            if (prevIndex == mTabModel.getCount() - 1) break;
-            if (rewoundTab == mTabModel.getTabAt(prevIndex + 1)) prevIndex++;
+            if (prevIndex == tabs.size() - 1) break;
+            if (rewoundTab == tabs.get(prevIndex + 1)) prevIndex++;
         }
 
-        // Figure out where to insert the tab.  Just add one to prevIndex, as -1 represents the
+        // Figure out where to insert the tab. Just add one to prevIndex, as -1 represents the
         // beginning of the list, so we'll insert at 0.
         int insertIndex = prevIndex + 1;
         mDelegate.insertUndoneTabClosureAt(tab, insertIndex);
