@@ -5,6 +5,7 @@
 package org.chromium.chrome.browser.signin;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.mockito.Mockito.timeout;
 import static org.mockito.Mockito.verify;
@@ -27,6 +28,7 @@ import org.chromium.base.ThreadUtils;
 import org.chromium.base.test.BaseJUnit4ClassRunner;
 import org.chromium.base.test.util.CriteriaHelper;
 import org.chromium.base.test.util.DisableIf;
+import org.chromium.base.test.util.DisabledTest;
 import org.chromium.base.test.util.DoNotBatch;
 import org.chromium.base.test.util.HistogramWatcher;
 import org.chromium.chrome.browser.profiles.Profile;
@@ -39,15 +41,13 @@ import org.chromium.chrome.test.util.browser.signin.SigninTestUtil;
 import org.chromium.components.signin.AccountManagerFacade;
 import org.chromium.components.signin.AccountManagerFacadeProvider;
 import org.chromium.components.signin.base.AccountInfo;
-import org.chromium.components.signin.base.CoreAccountInfo;
-import org.chromium.components.signin.identitymanager.ConsentLevel;
 import org.chromium.components.signin.identitymanager.IdentityManager;
+import org.chromium.components.signin.metrics.SigninAccessPoint;
 import org.chromium.components.signin.metrics.SignoutReason;
 import org.chromium.components.signin.test.util.FakeAccountManagerFacade;
 import org.chromium.components.signin.test.util.TestAccounts;
 import org.chromium.content_public.browser.test.NativeLibraryTestUtils;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 
@@ -87,18 +87,18 @@ public class SigninManagerIntegrationTest {
     @Test
     @MediumTest
     public void testUpdateAccountListNoAccountsRegisteredAndNoSignedInUser() {
-        Assert.assertArrayEquals(
+        Assert.assertEquals(
                 "Initial state: getAccounts must be empty",
-                new CoreAccountInfo[] {},
-                mIdentityManager.getAccountsWithRefreshTokens());
+                List.of(),
+                mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
 
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     // Run test.
-                    Assert.assertArrayEquals(
+                    Assert.assertEquals(
                             "No account: getAccounts must be empty",
-                            new CoreAccountInfo[] {},
-                            mIdentityManager.getAccountsWithRefreshTokens());
+                            List.of(),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
     }
 
@@ -109,38 +109,24 @@ public class SigninManagerIntegrationTest {
 
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertArrayEquals(
-                            "No signed in account: getAccounts must be empty",
-                            new CoreAccountInfo[] {},
-                            mIdentityManager.getAccountsWithRefreshTokens());
-                });
-    }
-
-    @Test
-    @MediumTest
-    public void testUpdateAccountListOneAccountsRegisteredSignedIn() {
-        mSigninTestRule.addAccountThenSignin(TestAccounts.ACCOUNT1);
-
-        ThreadUtils.runOnUiThreadBlocking(
-                () -> {
-                    Assert.assertArrayEquals(
-                            "Signed in: one account should be available",
-                            new CoreAccountInfo[] {TestAccounts.ACCOUNT1},
-                            mIdentityManager.getAccountsWithRefreshTokens());
+                    Assert.assertEquals(
+                            "Accounts should be available without being signed-in",
+                            List.of(TestAccounts.ACCOUNT1),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
     }
 
     @Test
     @MediumTest
     public void testUpdateAccountListSingleAccountThenAddOne() {
-        mSigninTestRule.addAccountThenSignin(TestAccounts.ACCOUNT1);
+        mSigninTestRule.addAccount(TestAccounts.ACCOUNT1);
 
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertArrayEquals(
-                            "Signed in and one account available",
-                            new CoreAccountInfo[] {TestAccounts.ACCOUNT1},
-                            mIdentityManager.getAccountsWithRefreshTokens());
+                    Assert.assertEquals(
+                            "One account available",
+                            List.of(TestAccounts.ACCOUNT1),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
 
         // Add another account.
@@ -149,18 +135,43 @@ public class SigninManagerIntegrationTest {
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     Assert.assertEquals(
-                            "Signed in and two accounts available",
-                            new HashSet<>(
-                                    Arrays.asList(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2)),
-                            new HashSet<>(
-                                    Arrays.asList(
-                                            mIdentityManager.getAccountsWithRefreshTokens())));
+                            "Two accounts available",
+                            List.of(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
     }
 
     @Test
     @MediumTest
-    public void testUpdateAccountListTwoAccountsThenRemoveOne() {
+    public void testAccountListNotUpdatedWhenFetchFailsAndListIsEmpty() {
+        mSigninTestRule.addAccountThenSignin(TestAccounts.ACCOUNT1);
+        ThreadUtils.runOnUiThreadBlocking(
+                () ->
+                        Assert.assertEquals(
+                                List.of(TestAccounts.ACCOUNT1),
+                                mIdentityManager
+                                        .getExtendedAccountInfoForAccountsWithRefreshToken()));
+
+        // Simulate a transient system failure where the AccountManager returns 0 accounts.
+        mSigninTestRule.setAccountFetchFailed();
+        mSigninTestRule.removeAccount(TestAccounts.ACCOUNT1.getId());
+
+        // An empty account list should be ignored to prevent accidental sign-outs (and potential
+        // data wipes).
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertEquals(
+                            "IdentityManager should retain the account. An empty account list is"
+                                    + " ignored when the fetch fails.",
+                            List.of(TestAccounts.ACCOUNT1),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
+                });
+        assertNotNull("primary account shoudld still be set", mSigninTestRule.getPrimaryAccount());
+    }
+
+    @Test
+    @MediumTest
+    public void testUpdateAccountListTwoAccountsThenRemoveSignedInOne() {
         // Add accounts.
         mSigninTestRule.addAccountThenSignin(TestAccounts.ACCOUNT1);
         mSigninTestRule.addAccount(TestAccounts.ACCOUNT2);
@@ -169,21 +180,46 @@ public class SigninManagerIntegrationTest {
                 () -> {
                     Assert.assertEquals(
                             "Signed in and two accounts available",
-                            new HashSet<>(
-                                    Arrays.asList(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2)),
-                            new HashSet<>(
-                                    Arrays.asList(
-                                            mIdentityManager.getAccountsWithRefreshTokens())));
+                            List.of(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
+                });
+
+        mSigninTestRule.signOut();
+        mSigninTestRule.removeAccount(TestAccounts.ACCOUNT1.getId());
+
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertEquals(
+                            "Only one account available, account1 should not be returned anymore",
+                            List.of(TestAccounts.ACCOUNT2),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
+                });
+    }
+
+    @Test
+    @MediumTest
+    @DisabledTest(message = "crbug.com/538021346")
+    public void testUpdateAccountListTwoAccountsThenRemoveNonSignedInOne() {
+        // Add accounts.
+        mSigninTestRule.addAccountThenSignin(TestAccounts.ACCOUNT1);
+        mSigninTestRule.addAccount(TestAccounts.ACCOUNT2);
+
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertEquals(
+                            "Signed in and two accounts available",
+                            List.of(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
 
         mSigninTestRule.removeAccount(TestAccounts.ACCOUNT2.getId());
 
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertArrayEquals(
+                    Assert.assertEquals(
                             "Only one account available, account2 should not be returned anymore",
-                            new CoreAccountInfo[] {TestAccounts.ACCOUNT1},
-                            mIdentityManager.getAccountsWithRefreshTokens());
+                            List.of(TestAccounts.ACCOUNT1),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
     }
 
@@ -198,11 +234,8 @@ public class SigninManagerIntegrationTest {
                 () -> {
                     Assert.assertEquals(
                             "Signed in and two accounts available",
-                            new HashSet<>(
-                                    Arrays.asList(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2)),
-                            new HashSet<>(
-                                    Arrays.asList(
-                                            mIdentityManager.getAccountsWithRefreshTokens())));
+                            List.of(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
 
         // Remove all.
@@ -211,10 +244,36 @@ public class SigninManagerIntegrationTest {
 
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertArrayEquals(
+                    Assert.assertEquals(
                             "No account available",
-                            new CoreAccountInfo[] {},
-                            mIdentityManager.getAccountsWithRefreshTokens());
+                            List.of(),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
+                });
+    }
+
+    @Test
+    @MediumTest
+    public void testUpdateAccountListTwoAccountsThenSignOut() {
+        // Add accounts.
+        mSigninTestRule.addAccountThenSignin(TestAccounts.ACCOUNT1);
+        mSigninTestRule.addAccount(TestAccounts.ACCOUNT2);
+
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertEquals(
+                            "Signed in and two accounts available",
+                            List.of(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
+                });
+
+        mSigninTestRule.signOut();
+
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertEquals(
+                            "Two accounts available",
+                            List.of(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
     }
 
@@ -230,11 +289,10 @@ public class SigninManagerIntegrationTest {
                 () -> {
                     Assert.assertEquals(
                             "Signed in and two accounts available",
+                            new HashSet<>(List.of(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2)),
                             new HashSet<>(
-                                    Arrays.asList(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2)),
-                            new HashSet<>(
-                                    Arrays.asList(
-                                            mIdentityManager.getAccountsWithRefreshTokens())));
+                                    mIdentityManager
+                                            .getExtendedAccountInfoForAccountsWithRefreshToken()));
                 });
 
         mSigninTestRule.signOut();
@@ -243,29 +301,10 @@ public class SigninManagerIntegrationTest {
 
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertArrayEquals(
-                            "Not signed in and no accounts available",
-                            new CoreAccountInfo[] {},
-                            mIdentityManager.getAccountsWithRefreshTokens());
-                });
-    }
-
-    @Test
-    @MediumTest
-    public void testUpdateAccountListTwoAccountsRegisteredAndOneSignedIn() {
-        // Add accounts.
-        mSigninTestRule.addAccountThenSignin(TestAccounts.ACCOUNT1);
-        mSigninTestRule.addAccount(TestAccounts.ACCOUNT2);
-
-        ThreadUtils.runOnUiThreadBlocking(
-                () -> {
                     Assert.assertEquals(
-                            "Signed in and two accounts available",
-                            new HashSet<>(
-                                    Arrays.asList(TestAccounts.ACCOUNT1, TestAccounts.ACCOUNT2)),
-                            new HashSet<>(
-                                    Arrays.asList(
-                                            mIdentityManager.getAccountsWithRefreshTokens())));
+                            "Not signed in and no accounts available",
+                            List.of(),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
     }
 
@@ -286,9 +325,12 @@ public class SigninManagerIntegrationTest {
 
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    assertNull(mIdentityManager.getPrimaryAccountInfo(ConsentLevel.SIGNIN));
+                    assertNull(mIdentityManager.getPrimaryAccountInfo());
                     assertNull(
                             SigninPreferencesManager.getInstance().getLegacyPrimaryAccountEmail());
+                    Assert.assertEquals(
+                            List.of(),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
     }
 
@@ -333,7 +375,7 @@ public class SigninManagerIntegrationTest {
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     assertEquals(
-                            mIdentityManager.getPrimaryAccountInfo(ConsentLevel.SIGNIN).getEmail(),
+                            mIdentityManager.getPrimaryAccountInfo().getEmail(),
                             renamedAccount.getEmail());
                     assertEquals(
                             SigninPreferencesManager.getInstance().getLegacyPrimaryAccountEmail(),
@@ -343,19 +385,19 @@ public class SigninManagerIntegrationTest {
 
     @Test
     @MediumTest
-    public void testClearPrimaryAccountWithSyncNotEnabled_signsOut() {
+    public void testClearPrimaryAccount_signsOut() {
         // Add accounts.
         mSigninTestRule.addTestAccountThenSignin();
 
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertTrue(mIdentityManager.hasPrimaryAccount(ConsentLevel.SIGNIN));
+                    Assert.assertTrue(mIdentityManager.hasPrimaryAccount());
 
                     // Run test.
                     mSigninManager.signOut(SignoutReason.TEST);
 
                     // Check the account is signed out
-                    Assert.assertFalse(mIdentityManager.hasPrimaryAccount(ConsentLevel.SIGNIN));
+                    Assert.assertFalse(mIdentityManager.hasPrimaryAccount());
                 });
 
         // Wait for the operation to have completed.
@@ -365,60 +407,11 @@ public class SigninManagerIntegrationTest {
 
     @Test
     @MediumTest
-    public void testClearPrimaryAccountWithSyncEnabled_signsOut() {
-        // Add accounts.
-        mSigninTestRule.addTestAccountThenSigninAndEnableSync();
-
-        ThreadUtils.runOnUiThreadBlocking(
-                () -> {
-                    Assert.assertTrue(mIdentityManager.hasPrimaryAccount(ConsentLevel.SYNC));
-
-                    // Run test.
-                    mSigninManager.signOut(SignoutReason.TEST);
-
-                    Assert.assertFalse(mIdentityManager.hasPrimaryAccount(ConsentLevel.SIGNIN));
-                });
-
-        // Wait for the operation to have completed - the revokeSyncConsent processing calls back
-        // SigninManager, and if we don't wait for this to complete before test teardown then we
-        // can hit a race condition where this async processing overlaps with the signout causing
-        // teardown to fail.
-        verify(mSignInStateObserverMock, timeout(CriteriaHelper.DEFAULT_MAX_TIME_TO_POLL).times(1))
-                .onSignedOut();
-    }
-
-    @Test
-    @MediumTest
-    public void testRevokeSyncConsent_disablesSync() {
-        // Add account.
-        mSigninTestRule.addTestAccountThenSigninAndEnableSync();
-
-        ThreadUtils.runOnUiThreadBlocking(
-                () -> {
-                    Assert.assertTrue(mIdentityManager.hasPrimaryAccount(ConsentLevel.SYNC));
-
-                    // Run test.
-                    mSigninManager.revokeSyncConsent(SignoutReason.TEST, null, false);
-
-                    Assert.assertFalse(mIdentityManager.hasPrimaryAccount(ConsentLevel.SYNC));
-                    Assert.assertTrue(mIdentityManager.hasPrimaryAccount(ConsentLevel.SIGNIN));
-                });
-
-        // Wait for the operation to have completed - the revokeSyncConsent processing calls back
-        // SigninManager, and if we don't wait for this to complete before test teardown then we
-        // can hit a race condition where this async processing overlaps with the signout causing
-        // teardown to fail.
-        verify(mSignInStateObserverMock, timeout(CriteriaHelper.DEFAULT_MAX_TIME_TO_POLL).times(1))
-                .onSignedOut();
-    }
-
-    @Test
-    @MediumTest
-    public void testSignInWithoutSync_waitForPrefCommit() {
+    public void testSignIn_waitForPrefCommit() {
         mSigninTestRule.addAccount(TestAccounts.ACCOUNT1);
         SigninTestUtil.signinAndWaitForPrefsCommit(TestAccounts.ACCOUNT1);
 
-        Assert.assertTrue(mIdentityManager.hasPrimaryAccount(ConsentLevel.SIGNIN));
+        assertNotNull(mSigninTestRule.getPrimaryAccount());
         verify(mSignInStateObserverMock, timeout(CriteriaHelper.DEFAULT_MAX_TIME_TO_POLL).times(1))
                 .onSignedIn();
     }
@@ -429,25 +422,23 @@ public class SigninManagerIntegrationTest {
         HistogramWatcher signoutWatcher =
                 HistogramWatcher.newSingleRecordWatcher("Signin.SignOut.Completed");
         mSigninTestRule.addAccountThenSignin(TestAccounts.ACCOUNT1);
-        // Blocks updated the accounts list and ensures that {@link #getCoreAccountInfos} returns an
+        // Blocks updated the accounts list and ensures that {@link #getAccounts} returns an
         // unfulfilled promise.
-        FakeAccountManagerFacade.UpdateBlocker blocker =
-                mSigninTestRule.blockGetCoreAccountInfosUpdate(/* populateCache= */ false);
+        FakeAccountManagerFacade.UpdateBlocker blocker = mSigninTestRule.blockGetAccountsUpdate();
 
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertTrue(mIdentityManager.hasPrimaryAccount(ConsentLevel.SIGNIN));
-                    Assert.assertFalse(mAccountManagerFacade.getCoreAccountInfos().isFulfilled());
+                    Assert.assertTrue(mIdentityManager.hasPrimaryAccount());
                     Assert.assertFalse(mAccountManagerFacade.getAccounts().isFulfilled());
                     Assert.assertEquals(
                             List.of(TestAccounts.ACCOUNT1),
-                            Arrays.asList(mIdentityManager.getAccountsWithRefreshTokens()));
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
 
                     // Sign-out should be allowed even if the list of accounts isn't available yet.
                     mSigninManager.signOut(SignoutReason.TEST);
 
                     // Check the account is signed out
-                    Assert.assertFalse(mIdentityManager.hasPrimaryAccount(ConsentLevel.SIGNIN));
+                    Assert.assertFalse(mIdentityManager.hasPrimaryAccount());
                 });
 
         // Wait for the operation to have completed.
@@ -456,16 +447,29 @@ public class SigninManagerIntegrationTest {
 
         // Unblocks the updates.
         blocker.close();
-        // Check that the account is still signed out and that is has been removed from the
-        // IdentityManager.
-        Assert.assertFalse(mIdentityManager.hasPrimaryAccount(ConsentLevel.SIGNIN));
+        // Check that the account is still signed out but the account is available in identity
+        // manager.
+        assertNull(mSigninTestRule.getPrimaryAccount());
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertArrayEquals(
-                            "No accounts available",
-                            new CoreAccountInfo[] {},
-                            mIdentityManager.getAccountsWithRefreshTokens());
+                    Assert.assertEquals(
+                            "Accounts are available",
+                            List.of(TestAccounts.ACCOUNT1),
+                            mIdentityManager.getExtendedAccountInfoForAccountsWithRefreshToken());
                 });
         signoutWatcher.assertExpected();
+    }
+
+    @Test
+    @MediumTest
+    public void testSignIn_SignInCompletedHistogramRecorded() {
+        var signinHistogram =
+                HistogramWatcher.newSingleRecordWatcher(
+                        "Signin.SignIn.Completed", SigninAccessPoint.WEB_SIGNIN);
+
+        mSigninTestRule.addAccountThenSignin(TestAccounts.ACCOUNT1);
+
+        signinHistogram.assertExpected(
+                "Signin should be recorded with WEB_SIGNIN as the access point.");
     }
 }
