@@ -4,10 +4,13 @@
 
 package org.chromium.chrome.browser.omaha;
 
+import static org.mockito.Mockito.mock;
+
 import android.content.SharedPreferences;
 
 import androidx.annotation.IntDef;
 
+import org.hamcrest.Matchers;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
@@ -19,10 +22,16 @@ import org.robolectric.annotation.Config;
 import org.chromium.base.ApiCompatibilityUtils;
 import org.chromium.base.FakeTimeTestRule;
 import org.chromium.base.ThreadUtils;
+import org.chromium.base.task.AsyncTask;
+import org.chromium.base.task.PostTask;
 import org.chromium.base.test.BaseRobolectricTestRunner;
 import org.chromium.base.test.util.Batch;
+import org.chromium.base.test.util.Criteria;
+import org.chromium.base.test.util.CriteriaHelper;
 import org.chromium.base.test.util.Feature;
 import org.chromium.chrome.browser.omaha.MockRequestGenerator.DeviceType;
+import org.chromium.components.background_task_scheduler.BackgroundTask;
+import org.chromium.components.background_task_scheduler.TaskParameters;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
@@ -36,14 +45,16 @@ import java.net.MalformedURLException;
 import java.net.SocketTimeoutException;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.LinkedList;
 import java.util.List;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 /**
- * Tests for the {@link OmahaClient}.
- * Tests override the original OmahaClient's functions with the MockOmahaClient, which
- * provides a way to hook into functions to return values that would normally be provided by the
- * system, such as whether Chrome was installed through the system image.
+ * Tests for the {@link OmahaClient}. Tests override the original OmahaClient's functions with the
+ * MockOmahaClient, which provides a way to hook into functions to return values that would normally
+ * be provided by the system, such as whether Chrome was installed through the system image.
  */
 @RunWith(BaseRobolectricTestRunner.class)
 @Batch(Batch.UNIT_TESTS)
@@ -51,8 +62,8 @@ import java.util.List;
 @SuppressWarnings("UnusedMethod")
 public class OmahaBaseTest {
     private static class TimestampPair {
-        public long timestampNextRequest;
-        public long timestampNextPost;
+        public final long timestampNextRequest;
+        public final long timestampNextPost;
 
         public TimestampPair(long timestampNextRequest, long timestampNextPost) {
             this.timestampNextRequest = timestampNextRequest;
@@ -61,14 +72,13 @@ public class OmahaBaseTest {
     }
 
     private static class MockOmahaDelegate extends OmahaDelegate {
-        private final List<Integer> mPostResults = new ArrayList<Integer>();
-        private final List<Boolean> mGenerateAndPostRequestResults = new ArrayList<Boolean>();
+        private final List<Integer> mPostResults = new ArrayList<>();
+        private final List<Boolean> mGenerateAndPostRequestResults = new ArrayList<>();
 
         private final boolean mIsOnTablet;
         private final boolean mIsInForeground;
         private final boolean mIsInSystemImage;
         private final ExponentialBackoffScheduler mScheduler;
-        private MockRequestGenerator mMockGenerator;
 
         private int mNumUUIDsGenerated;
         private long mNextScheduledTimestamp = -1;
@@ -77,7 +87,7 @@ public class OmahaBaseTest {
         private TimestampPair mTimestampsOnRegisterNewRequest;
         private TimestampPair mTimestampsOnSaveState;
 
-        MockOmahaDelegate(DeviceType deviceType, @InstallSource int installSource) {
+        MockOmahaDelegate(@DeviceType int deviceType, @InstallSource int installSource) {
             mIsOnTablet = deviceType == DeviceType.TABLET;
             mIsInForeground = true;
             mIsInSystemImage = installSource == InstallSource.SYSTEM_IMAGE;
@@ -91,9 +101,9 @@ public class OmahaBaseTest {
 
         @Override
         protected RequestGenerator createRequestGenerator() {
-            mMockGenerator =
+            MockRequestGenerator mockGenerator =
                     new MockRequestGenerator(mIsOnTablet ? DeviceType.TABLET : DeviceType.HANDSET);
-            return mMockGenerator;
+            return mockGenerator;
         }
 
         @Override
@@ -186,7 +196,9 @@ public class OmahaBaseTest {
     }
 
     private MockOmahaBase createOmahaBase(
-            @ServerResponse int response, @ConnectionStatus int status, DeviceType deviceType) {
+            @ServerResponse int response,
+            @ConnectionStatus int status,
+            @DeviceType int deviceType) {
         MockOmahaBase omahaClient = new MockOmahaBase(mDelegate, response, status, deviceType);
         return omahaClient;
     }
@@ -202,7 +214,7 @@ public class OmahaBaseTest {
     }
 
     private class MockOmahaBase extends OmahaBase {
-        private final LinkedList<MockConnection> mMockConnections = new LinkedList<>();
+        private final List<MockConnection> mMockConnections = new ArrayList<>();
 
         private final boolean mSendValidResponse;
         private final boolean mConnectionTimesOut;
@@ -215,7 +227,7 @@ public class OmahaBaseTest {
                 OmahaDelegate delegate,
                 @ServerResponse int serverResponse,
                 @ConnectionStatus int connectionStatus,
-                DeviceType deviceType) {
+                @DeviceType int deviceType) {
             super(delegate);
             mSendValidResponse = serverResponse == ServerResponse.SUCCESS;
             mConnectionTimesOut = connectionStatus == ConnectionStatus.TIMES_OUT;
@@ -236,7 +248,7 @@ public class OmahaBaseTest {
 
         /** Returns the last MockPingConection used to simulate communication with the server. */
         public MockConnection getLastConnection() {
-            return mMockConnections.getLast();
+            return mMockConnections.get(mMockConnections.size() - 1);
         }
 
         public boolean isSendInstallEvent() {
@@ -268,7 +280,7 @@ public class OmahaBaseTest {
                                 mSendInstallEvent,
                                 mConnectionTimesOut,
                                 mUpdateVersion);
-                mMockConnections.addLast(connection);
+                mMockConnections.add(connection);
             } catch (MalformedURLException e) {
                 Assert.fail("Caught a malformed URL exception: " + e);
             }
@@ -343,7 +355,6 @@ public class OmahaBaseTest {
     @Test
     @Feature({"Omaha"})
     public void testPipelineFreshInstallUpdatedAvailable_crbug_1095755() {
-        final long now = mDelegate.getScheduler().getCurrentTime();
         final String updateVersion = "10.0.0.0";
 
         // Trigger Omaha.
@@ -738,6 +749,10 @@ public class OmahaBaseTest {
         private String mRequestPropertyField;
         private String mRequestPropertyValue;
 
+        private final Object mLock = new Object();
+        private boolean mShouldHang;
+        private volatile boolean mIsInterrupted;
+
         MockConnection(
                 URL url,
                 boolean usingTablet,
@@ -747,6 +762,9 @@ public class OmahaBaseTest {
                 String updateVersion) {
             super(url);
             Assert.assertEquals(MockRequestGenerator.SERVER_URL, url.toString());
+
+            mShouldHang = false;
+            mIsInterrupted = false;
 
             mUpdateVersion = updateVersion;
             String mockResponse = buildServerResponseString(usingTablet, sendInstallEvent);
@@ -784,10 +802,12 @@ public class OmahaBaseTest {
                 response += "<urls><url codebase=\"" + MARKET_URL + "\"/></urls>";
                 response += "<manifest version=\"" + mUpdateVersion + "\">";
                 response += "<packages>";
-                response += "<package hash=\"0\" name=\"dummy.apk\" required=\"true\" size=\"0\"/>";
+                response +=
+                        "<package hash=\"0\" name=\"placeholder.apk\" required=\"true\""
+                                + " size=\"0\"/>";
                 response += "</packages>";
                 response += "<actions>";
-                response += "<action event=\"install\" run=\"dummy.apk\"/>";
+                response += "<action event=\"install\" run=\"placeholder.apk\"/>";
                 response += "<action event=\"postinstall\"/>";
                 response += "</actions>";
                 response += "</manifest>";
@@ -812,7 +832,20 @@ public class OmahaBaseTest {
         }
 
         @Override
-        public void disconnect() {}
+        public void disconnect() {
+            synchronized (mLock) {
+                mIsInterrupted = true;
+                mLock.notifyAll();
+            }
+        }
+
+        public void setShouldHang(boolean shouldHang) {
+            mShouldHang = shouldHang;
+        }
+
+        public boolean isConnectionActive() {
+            return mShouldHang && !mIsInterrupted;
+        }
 
         @Override
         public void setDoOutput(boolean value) throws IllegalAccessError {
@@ -845,6 +878,19 @@ public class OmahaBaseTest {
         public OutputStream getOutputStream() throws IOException {
             mSentRequest = true;
             connect();
+            if (mShouldHang) {
+                synchronized (mLock) {
+                    while (!mIsInterrupted) {
+                        try {
+                            mLock.wait(100);
+                        } catch (InterruptedException e) {
+                            mIsInterrupted = true;
+                            break;
+                        }
+                    }
+                }
+                throw new IOException("Connection interrupted / closed");
+            }
             return mOutputStream;
         }
 
@@ -884,6 +930,104 @@ public class OmahaBaseTest {
 
         public String getRequestPropertyValue() {
             return mRequestPropertyValue;
+        }
+    }
+
+    @Test
+    @Feature({"Omaha"})
+    public void testOmahaService_QueueBlockedImpact() throws Exception {
+        // Use a real concurrent executor instead of Robolectric's PausedExecutorService
+        PostTask.setPrenativeThreadPoolExecutorForTesting(Executors.newSingleThreadExecutor());
+
+        OmahaBase.setIsDisabledForTesting(false);
+        URL url = new URL(mDelegate.getRequestGenerator().getServerUrl());
+        MockConnection mockConnection =
+                new MockConnection(
+                        url,
+                        /* usingTablet= */ false,
+                        /* sendValidResponse= */ true,
+                        /* sendInstallEvent= */ false,
+                        /* connectionTimesOut= */ false,
+                        /* updateVersion= */ "1.2.3.4");
+        mockConnection.setShouldHang(true);
+        MockOmahaService omahaService = new MockOmahaService(mDelegate, mockConnection);
+
+        // Trigger valid request state
+        SharedPreferences.Editor editor = OmahaPrefUtils.getSharedPreferences().edit();
+        editor.putBoolean(OmahaPrefUtils.PREF_SEND_INSTALL_EVENT, false);
+        editor.putLong(OmahaPrefUtils.PREF_TIMESTAMP_FOR_NEW_REQUEST, 20000);
+        editor.putLong(OmahaPrefUtils.PREF_TIMESTAMP_OF_REQUEST, 10000);
+        editor.putString(OmahaPrefUtils.PREF_PERSISTED_REQUEST_ID, "persisted_id");
+        editor.putLong(OmahaPrefUtils.PREF_TIMESTAMP_FOR_NEXT_POST_ATTEMPT, 0);
+        editor.apply();
+
+        BackgroundTask.TaskFinishedCallback mockCallback =
+                mock(BackgroundTask.TaskFinishedCallback.class);
+        TaskParameters mockParams = mock(TaskParameters.class);
+
+        // 1. Start the background task (spawns the AsyncTask on SERIAL_EXECUTOR)
+        omahaService.onStartTask(null, mockParams, mockCallback);
+
+        // Wait dynamically up to 1 second for the background thread to spawn using JUnit UI polling
+        CriteriaHelper.pollUiThreadForJUnit(
+                () ->
+                        Criteria.checkThat(
+                                "Omaha background thread was not spawned",
+                                omahaService.getExecutingThread(),
+                                Matchers.notNullValue()));
+
+        Thread thread = omahaService.getExecutingThread();
+
+        // 2. Stop the task (simulating OS unbind / cancellation)
+        omahaService.onStopTask(null, mockParams);
+
+        // 3. Post a healthy, simple task to the same SERIAL_EXECUTOR
+        final AtomicBoolean executed = new AtomicBoolean(false);
+        final CountDownLatch latch = new CountDownLatch(1);
+
+        AsyncTask.SERIAL_EXECUTOR.execute(
+                () -> {
+                    executed.set(true);
+                    latch.countDown();
+                });
+
+        // Wait up to 500ms for the healthy task to execute
+        boolean finished = latch.await(500, TimeUnit.MILLISECONDS);
+
+        // Verify that when the background task is cancelled/stopped, it does not permanently block
+        // subsequent tasks queued on the SerialExecutor from executing.
+        Assert.assertTrue(
+                "SerialExecutor queue remains blocked after task cancellation!",
+                finished && executed.get());
+
+        // Clean up
+        mockConnection.disconnect();
+        thread.interrupt();
+        thread.join(500);
+    }
+
+    private static class MockOmahaService extends OmahaService {
+        private final MockConnection mMockConnection;
+        private Thread mExecutingThread;
+
+        MockOmahaService(OmahaDelegate delegate, MockConnection mockConnection) {
+            super(delegate);
+            mMockConnection = mockConnection;
+        }
+
+        @Override
+        protected HttpURLConnection createConnection() {
+            mExecutingThread = Thread.currentThread();
+            return mMockConnection;
+        }
+
+        @Override
+        protected String getInstalledVersion() {
+            return "1.2.3.4";
+        }
+
+        public Thread getExecutingThread() {
+            return mExecutingThread;
         }
     }
 }
